APIGatewayMVC/apigateway.yaml
# Deployment Manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(appName)
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $(appName)
  template:
    metadata:
      labels:
        app: $(appName)
    spec:
      containers:
        - name: $(appName)
          image: azcentralcr.azurecr.io/$(appName):$(tag)
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "1.5Gi"
          # livenessProbe:
          #   httpGet:
          #     path: /health #URL PATH HEALTH CHECK
          #     port: 80
            # initialDelaySeconds: 10
            # periodSeconds: 15
---
# Service Manifest
apiVersion: v1
kind: Service
metadata:
  name: $(appName)-service
spec:
  selector:
    app: $(appName)
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # containerPort

---
# Ingress Manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $(appName)-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 3m
spec:
  tls:
    - hosts:
        - $(envName).$(appName).pta-events.com
      secretName: pta-events.com
  rules:
    - host: $(envName).$(appName).pta-events.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $(appName)-service
                port:
                  number: 80
